--- a/package.json
+++ b/package.json
@@ -12,5 +12,11 @@
         "postcss": "^8.4.32",
         "tailwindcss": "^3.4.0",
         "vite": "^5.0.0"
+    },
+    "dependencies": {
+        "next": "^14.0.4",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0"
     }
+    
 }
