--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        "laravel": "concurrently \"php artisan serve\" \"npm run dev\""
     },
     "devDependencies": {
         "autoprefixer": "^10.4.16",
@@ -18,5 +19,4 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
     }
-    
 }
