--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "scripts": {
         "dev": "vite",
         "build": "vite build",
-        "laravel": "concurrently \"php artisan serve\" \"npm run dev\""
+        "laravel": "concurrently \"php artisan serve --host=192.168.50.83 --port=5174\" \"npm run dev -- --host=192.168.50.83\""
     },
     "devDependencies": {
         "autoprefixer": "^10.4.16",
@@ -16,6 +16,7 @@
         "vite": "^5.0.0"
     },
     "dependencies": {
+        "animate.css": "^4.1.1",
         "next": "^14.0.4",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
