--- a/composer.json
+++ b/composer.json
@@ -52,6 +52,10 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
+        ],
+        "vercel": [
+            "pnpm install",
+            "pnpm run build"
         ]
     },
     "extra": {
