--- a/vercel.json
+++ b/vercel.json
@@ -15,7 +15,7 @@
          "APP_ENV": "production",
          "APP_DEBUG": "false",
          "APP_URL": "https://yourproductionurl.com",
-         "APP_KEY": "base64:TGaVaXwhWgjn9akhE4SCSIjGG/cQqvICUQ+PgLA3Bs0=",
+         "APP_KEY": "base64:McRuu+W8ptc7VMgpvP2XCyZWrc9f+Xt6jqn6djn1gvY=",
          "APP_CONFIG_CACHE": "/tmp/config.php",
          "APP_EVENTS_CACHE": "/tmp/events.php",
          "APP_PACKAGES_CACHE": "/tmp/packages.php",
@@ -26,9 +26,9 @@
          "LOG_CHANNEL": "stderr",
          "SESSION_DRIVER": "cookie",
          "DB_CONNECTION": "mysql",
-         "DB_HOST": "4gg.h.filess.io",
+         "DB_HOST": "jv-b7.h.filess.io",
          "DB_PORT": "3306",
-         "DB_DATABASE": "db2024_stormtorn",
-         "DB_USERNAME": "db2024_stormtorn"
+         "DB_DATABASE": "fashion_sortsight",
+         "DB_USERNAME": "fashion_sortsight"
      }
  }
