--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "diglactic/laravel-breadcrumbs": "^9.0",
         "dompdf/dompdf": "^2.0",
         "filament/filament": "^3.2",
         "guzzlehttp/guzzle": "^7.2",
