--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,12 @@
-APP_NAME=Laravel
+APP_NAME=Flaut
 APP_ENV=local
-APP_KEY=base64:bV8E5r0Cm3EjQuHP/3gCw5XkZdyJOGb7qvYiOObysSc=
+APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
+APP_TIMEZONE=Asia/Jakarta
+APP_LOCALE=en
+APP_FALLBACK_LOCALE=en
+APP_FAKER_LOCALE=en_US
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
